welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:8: error: ')' expected but 'if' found.
if(getDirection()==Direction.OUEST) { droite();avance();droite();}
^